# doxia-core-2

./: .gitignore  AGENTS.md  database_manifest.txt  opencode.json  package-lock.json  package.json  srtd.config.json  vivecode.md
backend/: pyproject.toml  worker.py
backend/tests/: test_worker.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: DocumentQueue.tsx
frontend/src/app/: layout.tsx
frontend/src/components/: DocumentQueue.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/lib/: supabase.ts  types.ts
src/modules/auth_domain/functions/: fn_handle_new_user.sql  is_org_member.sql
src/modules/auth_domain/policies/: rls_tenant_isolation.sql
src/modules/auth_domain/triggers/: trg_on_auth_user_created.sql
src/modules/fsm_domain/functions/: fn_on_document_created.sql
src/modules/fsm_domain/triggers/: trg_document_created.sql
supabase/: config.toml
supabase/migrations/: 20260324041940_init_core_schema.sql  20260324043922_init_pgmq.sql  20260324043956_init_fsm_trigger.sql  20260324045446_init_embeddings_schema.sql  20260324045712_init_fsm_function.sql  20260324053405_init_auth_schema.sql  20260324053455_init_rls_policies_auth.sql
supabase/tests/: test_01_schema.sql  test_02_fsm_trigger.sql  test_03_auth_rls.sql
