[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "langchain-core>=1.2.21",
    "langchain-openai>=1.1.12",
    "pgvector>=0.4.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
